2010-10-18  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #1318: 'removeTag' does not remove closing tags

2010-10-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15657: IRRE: Foreign selector with groupdb won't add new items (Thanks to Thomas Maroschik)

2010-10-17  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15830: Sprite - IRRE record synchronization icon missing (Thanks to Stefan Galinski)

2010-10-17  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #16022: Size calculation function can only deal with integers

2010-10-16  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14835: IRRE Move-Icon should have curser:move (Thanks to Georg Ringer)

2010-10-15  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #16005: Live workspace does not respect move-to-placeholders
	* Fixed bug #11444: Workspace Dropdown in "Workspace" -> "Review and Publish" [LIVE workspace] always shows "[Draft Workspace]" (Thanks to Robert Heel)

2010-10-15 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15928:#15543 Bugfix : PHP Warning in t3lib_spritemanager (Thanks to Sven Juergens)
	* Fixed bug #15822: t3lib_beFunc use $this in static methods
	* Fixed bug #15993: Bug: Felogin shouldn't show the permalogin form controls when permalogin is set to "forced on" in install tool

2010-10-14  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #103: No Plain-text List Option

2010-10-12  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15168: Template auto complete is hidden beneath next text area field

2010-10-11  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #12376: typo3temp got filled with thousands of javascript_* files (Thanks to Georg Ringer)

2010-10-10  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15835: deprecationLog in console crashes output on login page
	* Fixed bug #15727: Clean-up for PageRenderer
	* Fixed bug #15690: Change text of exception in t3lib_cache_frontend_stringfrontend
	* Fixed bug #15944: Flashmessage "content_from_pid" misses page title
