@@ -1,3 +1,7 @@
+2010-10-18  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #16050: htmlArea RTE: Backspacing in empty editing area may raise js error
+
 2010-10-06  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
