@@ -1,3 +1,7 @@
+2010-10-18  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #16050: htmlArea RTE: Backspacing in empty editing area may raise js error
+
 2010-10-18  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Fixed bug #1318: 'removeTag' does not remove closing tags
